--- a/new/index.html
+++ b/new/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title>  
 </head>
 <body>
-    
-    <script src="./hcf.js"></script>
+    <!-- script file > inline js -->
+   <a href="#" id="btn1">Login</a>
+   <button ondblclick="alert('btn clicked twice')">Double click</button>
+
+   <script src="./events.js"></script>
 </body>
 </html>
