--- a/new/game.html
+++ b/new/game.html
@@ -14,13 +14,16 @@
 
             <div class="choices">
                 <div class="choice" onclick="game('rock')">
-                    <img src="./images/rock.jpg" width="100px" alt="">
+                    <img src="./images/rock.jpg" width="120px" alt="">
+                    <h3>ROCK</h3>
                 </div>
                 <div class="choice" onclick="game('paper')">
                     <img src="./images/paper.jpg" width="100px" alt="">
+                    <h3>PAPER</h3>
                 </div>
                 <div class="choice" onclick="game('scissors')">
                     <img src="./images/scissors.jpg" width="100px" alt="">
+                    <h3>SCISSORS</h3>
                 </div>
             </div>
 
